two wersion index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <header>
         <h1>salom dunyo</h1>
     </header>
+    <main>
+        <h2>hello world</h2>
+    </main>
 </body>
 </html>
