one wersion navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <h1>salom dunyo</h1>
+        <nav>
+            <ul>
+                <li>salom dunyo</li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2>hello world</h2>
